kubernetes/apps/tailscale/proxy/app/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tailscale-proxy-metrics
  namespace: tailscale
spec:
  podSelector:
    matchLabels:
      tailscale.com/managed: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9002
